# ProjectKnickerbocker

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  openapi.yaml
.github/workflows/: ci.yml  docker.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md
backend/migrations/: 001_initial_schema.sql  001_schema.sql  002_plan_update_no_sessions.sql  003_halls_description.sql
backend/src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
backend/src/handlers/: auth.rs  games.rs  halls.rs  invites.rs  mod.rs  sessions.rs  stats.rs  users.rs
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  hooks.ts  index.css  types.ts
frontend/src/components/: Layout.tsx  LeaderboardChart.tsx  Navbar.tsx  PointsTrendChart.tsx  StatCard.tsx
frontend/src/components/ui/: animated-gradient-text.tsx  background-beams.tsx  card-hover-effect.tsx  moving-border.tsx  sparkles.tsx  spotlight.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/i18n/: index.ts
frontend/src/locales/: en.json  zh.json
frontend/src/pages/: CreateGame.tsx  GameDetail.tsx  HallDetail.tsx  HallList.tsx  InvitesPage.tsx  LoginPage.tsx  PersonalDashboard.tsx
